# semantic_mapping

./: .gitmodules  .rosinstall  .rosinstall.bak  README.md
hydra/hydra_dsg_builder/: CMakeLists.txt  package.xml
hydra/hydra_dsg_builder/config/uhumans2/: dsg_frontend_config.yaml  uhumans2_office_typology.yaml
hydra/hydra_dsg_builder/include/hydra_dsg_builder/: incremental_mesh_segmenter.h
hydra/hydra_dsg_builder/launch/: dsg_builder.launch  hydra_realsense_builder.launch
hydra/hydra_dsg_builder/rviz/: uhumans2.rviz
hydra/hydra_dsg_builder/src/: incremental_dsg_frontend.cpp  incremental_mesh_segmenter.cpp
hydra/hydra_msgs/: CMakeLists.txt  package.xml
hydra/hydra_msgs/msg/: ObjectInfo.msg
object_processor/: CMakeLists.txt  package.xml
object_processor/config/: mask_rcnn_mapping.csv
object_processor/launch/: demo.launch  object_processor.launch  orb_slam2_d435_rgbd.launch  sparseinst_ros.launch
object_processor/scene_graphs/: static_objects.pkl  updated_scene_graph.pkl  updated_scene_graph_1.pkl
object_processor/scripts/: static_map.py  stretch_tf_correction.py  update_scene_graph.py
sparseinst_ros/: CMakeLists.txt  demo.py  package.xml  sparse_inst_r50_giam_aug_2b7d68.pth  sparseinst_ros.py
sparseinst_ros/output/sparse_inst_r50_giam/: config.yaml  log.txt
sparseinst_ros/sparseinst/: d2_predictor.py
yolact_ros/launch/: yolact_ros.launch
yolact_ros/scripts/yolact/data/: config.py
